--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
    
     <!-- SECCION FOOTER -->
     <footer>
-        <p>Todos los derechos reservados - 2024</p>
+        <p>Rutagrama y Contactos de Emergencias VIG - 2024</p>
         <div class="redes">
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://www.facebook.com/p/Alianza-Ikaro-100078649232322/"><i class="fa-brands fa-facebook"></i></a>
-            <a href=""><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="index11.html"><i class="fa-solid fa-phone"></i></a>
+            <a href=""><i class="fa-solid fa-circle-h"></i></a>
         </div>
 
     </footer>
