--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <footer>
         <p>Rutagrama y Contactos de Emergencias VIG - 2024</p>
         <div class="redes">
-            <a href="index11.html"><i class="fa-solid fa-phone"></i></a>
+            <a href=""><i class="fa-solid fa-phone"></i></a>
             <a href=""><i class="fa-solid fa-circle-h"></i></a>
         </div>
 
